# design-patterns

./: CMakeLists.txt  README.md
kamacoder/: 11-composite.cpp  7-proxy.cpp  8-decorator.cpp  CMakeLists.txt  README.md
kamacoder/behavioral/: 13-observer.cpp  14-strategy.cpp  15-transaction.cpp  16-mediator.cpp  17-memento.cpp  18-template_method.cpp  19-iterator.cpp  20-state.cpp  21-CoR.cpp  23-visitor.cpp
kamacoder/creational/: 1-singleton.cpp  2-factory.cpp  3-abstract_factory.cpp  4-builder.cpp  5-prototype.cpp
kamacoder/structural/: 10-bridge.cpp  11-composite.cpp  12-flyweight.cpp  6-adapter.cpp  7-proxy.cpp  9-facade.cpp
refactoringguru/structural/: bridge.cpp
