# creational
add_executable(1-singleton creational/1-singleton.cpp)
add_executable(2-factory creational/2-factory.cpp)
add_executable(3-abstract_factory creational/3-abstract_factory.cpp)
add_executable(4-builder creational/4-builder.cpp)
add_executable(5-prototype creational/5-prototype.cpp)
# structural
add_executable(6-adapter structural/6-adapter.cpp)
add_executable(7-proxy structural/7-proxy.cpp)
add_executable(8-decorator structural/8-decorator.cpp)
add_executable(9-facade structural/9-facade.cpp)
add_executable(10-bridge structural/10-bridge.cpp)
add_executable(11-composite structural/11-composite.cpp)
add_executable(12-flyweight structural/12-flyweight.cpp)
# behavioral
add_executable(13-observer behavioral/13-observer.cpp)
add_executable(14-strategy behavioral/14-strategy.cpp)
add_executable(15-transaction behavioral/15-transaction.cpp)
add_executable(16-mediator behavioral/16-mediator.cpp)
add_executable(17-memento behavioral/17-memento.cpp)
add_executable(18-template_method behavioral/18-template_method.cpp)
add_executable(19-iterator behavioral/19-iterator.cpp)
add_executable(20-state behavioral/20-state.cpp)
add_executable(21-CoR behavioral/21-CoR.cpp)
add_executable(23-visitor behavioral/23-visitor.cpp)
